k3s/ingress/traefik/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroutetls
  namespace: whoami
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`whoami.xxx.com`) && PathPrefix(`/tls`)
    kind: Rule
    services:
    - name: whoami
      port: 80
  tls:
    certResolver: myresolver
